Fixed title spacing.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html *
   letter-spacing: 4px;
   word-spacing: -8px;
   color: tomato;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 40px;
   text-shadow:
     -1px -1px 0 firebrick,
